# bazel_python_helloworld

./: .bazelignore  .bazelrc  .bazelversion  .gitignore  BAZEL_TARGETS.txt  BUILD.bazel  MODULE.bazel  Makefile  requirements_lock_3_13.txt
cmd/: BUILD.bazel  main.py  requirements_lock.txt
pkg/: BUILD.bazel  pyproject.toml
